--- a/index.html
+++ b/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arun's Personal Site</title>
+    <title>Arun's Development Profile</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-    <img src="images/Profile.jpg" alt="Arun's Image">
-    <h1> Arun Kumar Rajasekaran</h1>
-    <p><em>FullStack <strong>Developer</strong></em></p>
-    <p>I am a fullstack developer with 10 years of experience in Java, Spring, Oracle , Angular and Node. <br> 
-        Currently I am employed fulltime with BNP Paribas Solution and Services. <br>
-    </p>
-    <hr noshade size="3">
+    <table spacing="20">
+        <td>
+            <img src="images/Profile.jpg" alt="Arun's Image">
+        </td>
+        <td>
+            <h1> Arun Kumar Rajasekaran</h1>
+            <p><em>FullStack <strong>Developer</strong></em></p>
+            <p>I am a fullstack developer with 10 years of experience in Java, Spring, Oracle and Angular. <br>
+                Currently I am employed fulltime with BNP Paribas India Solutions Pvt. Ltd <br>
+            </p>
+        </td>
+    </table>
+    <hr>
     <h3>Education</h3>
     <ul>
         <li>Kendriya Vidyalaya No.2, Tambaram</li>
@@ -23,20 +32,20 @@
     <h3>Work Experience</h3>
     <table cellspacing="10">
         <tr>
-            <td>2010-2015</td>
-            <td>Infosys</td>
+            <td>Nov/2010-Feb/2015</td>
+            <td>Infosys Limited</td>
         </tr>
         <tr>
-            <td>2015-2017</td>
+            <td>Feb/2015-Apr/2018</td>
             <td>Verizon Data Services Limited</td>
         </tr>
         <tr>
-            <td>2017-2020</td>
+            <td>Apr/2018-Jun/2020</td>
             <td>Alten Calsoft Labs Pvt. Ltd</td>
         </tr>
         <tr>
-            <td>2020-Current</td>
-            <td>BNP Paribas</td>
+            <td>Jun/2020-Current</td>
+            <td>BNP Paribas India Solutions Pvt. Ltd</td>
         </tr>
     </table>
     <hr>
@@ -63,4 +72,5 @@
     <a href="hobbies.html">Hobbies</a>
     <a href="contact.html">Contact Me</a>
 </body>
+
 </html>
